# fpl-optimizer

./: LICENSE  Makefile  README.md  my_team.json  pyproject.toml
configs/: settings.yaml  weights.yaml
notebooks/: README.md
src/fpl_opt/: cli.py
src/fpl_opt/features/: projections.py
src/fpl_opt/fplio/: api.py  normalize.py
src/fpl_opt/optimize/: model.py  transfers.py
src/fpl_opt/tools/: names_to_teams.py
tests/: test_wireup.py
